// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recommend_pairs doesn't shove everyone onto the same board 1`] = `
{
  "floating": {
    "exempt": false,
    "id": "-1",
    "name": "floating_board_name",
  },
  "id": "project_id",
  "name": "project_name",
  "pairingBoards": [
    {
      "exempt": false,
      "id": "red_id",
      "name": "red_start",
    },
    {
      "exempt": false,
      "id": "blue_id",
      "name": "blue_start",
    },
    {
      "exempt": true,
      "id": "exempt",
      "name": "out_of_office",
    },
  ],
  "people": [
    {
      "id": "red_parrit_id",
      "name": "red_parrit",
      "pairing_board_id": "red_id",
      "type": "Person",
    },
    {
      "id": "absent",
      "name": "Permanent Vacation",
      "pairing_board_id": "exempt",
      "type": "Person",
    },
    {
      "id": "floaty_2",
      "name": "Floaty2",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_3",
      "name": "Floaty3",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_4",
      "name": "Floaty4",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_5",
      "name": "Floaty5",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_6",
      "name": "Floaty6",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_7",
      "name": "Floaty7",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_8",
      "name": "Floaty8",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floaty_9",
      "name": "Floaty9",
      "pairing_board_id": "-1",
      "type": "Person",
    },
    {
      "id": "floater_id",
      "name": "floater_name_start",
      "pairing_board_id": "red_id",
      "type": "Person",
    },
    {
      "id": "floaty_1",
      "name": "Floaty1",
      "pairing_board_id": "blue_id",
      "type": "Person",
    },
    {
      "id": "floaty_10",
      "name": "Floaty10",
      "pairing_board_id": "blue_id",
      "type": "Person",
    },
  ],
  "roles": [
    {
      "id": "blue_role",
      "name": "Blue Role",
      "pairing_board_id": "blue_id",
      "type": "Role",
    },
    {
      "id": "ooo",
      "name": "OOOROLE",
      "pairing_board_id": "exempt",
      "type": "Role",
    },
  ],
}
`;

exports[`recommend_pairs recommends pairs 1`] = `
{
  "floating": {
    "exempt": false,
    "id": "-1",
    "name": "floating_board_name",
  },
  "id": "project_id",
  "name": "project_name",
  "pairingBoards": [
    {
      "exempt": false,
      "id": "red_id",
      "name": "red_start",
    },
    {
      "exempt": false,
      "id": "blue_id",
      "name": "blue_start",
    },
    {
      "exempt": true,
      "id": "exempt",
      "name": "out_of_office",
    },
  ],
  "people": [
    {
      "id": "red_parrit_id",
      "name": "red_parrit",
      "pairing_board_id": "red_id",
      "type": "Person",
    },
    {
      "id": "absent",
      "name": "Permanent Vacation",
      "pairing_board_id": "exempt",
      "type": "Person",
    },
    {
      "id": "floater_id",
      "name": "floater_name_start",
      "pairing_board_id": "red_id",
      "type": "Person",
    },
  ],
  "roles": [
    {
      "id": "blue_role",
      "name": "Blue Role",
      "pairing_board_id": "blue_id",
      "type": "Role",
    },
    {
      "id": "ooo",
      "name": "OOOROLE",
      "pairing_board_id": "exempt",
      "type": "Role",
    },
  ],
}
`;
